add_subdirectory(algorithm)
add_subdirectory(any_regular)
add_subdirectory(conversion)
add_subdirectory(copy_on_write)
add_subdirectory(enum_ops)
add_subdirectory(equal_range)
add_subdirectory(erase)
add_subdirectory(expression_parser)
add_subdirectory(forest)
add_subdirectory(functional)
add_subdirectory(lex_stream)
add_subdirectory(lower_bound)
add_subdirectory(name)
